--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
